ECA-6808: Fix minor bugs and clean up code
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@31259 37aeb1de-b14b-0410-9a0e-82b28170d228