@@ -21,103 +21,77 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map.Entry;
+import java.util.TreeMap;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipInputStream;
-import java.util.TreeMap;
+
 import javax.annotation.PostConstruct;
+import javax.ejb.EJB;
 import javax.faces.application.FacesMessage;
 import javax.faces.bean.ManagedBean;
 import javax.faces.bean.SessionScoped;
 import javax.faces.context.FacesContext;
-import javax.faces.event.ComponentSystemEvent;
 import javax.faces.model.SelectItem;
 import javax.servlet.http.HttpServletRequest;
-import org.apache.commons.fileupload.FileUploadException;
+
 import org.apache.commons.lang.StringUtils;
 import org.apache.log4j.Logger;
 import org.apache.myfaces.custom.fileupload.UploadedFile;
 import org.cesecore.authorization.AuthorizationDeniedException;
 import org.cesecore.authorization.AuthorizationSessionLocal;
-import org.cesecore.authorization.control.StandardRules;
+import org.cesecore.certificates.certificateprofile.CertificateProfileSessionLocal;
 import org.cesecore.certificates.endentity.EndEntityConstants;
 import org.cesecore.util.SecureXMLDecoder;
 import org.cesecore.util.StringTools;
+import org.ejbca.core.ejb.ra.raadmin.EndEntityProfileSessionLocal;
 import org.ejbca.core.model.authorization.AccessRulesConstants;
 import org.ejbca.core.model.ra.raadmin.EndEntityProfile;
 import org.ejbca.core.model.ra.raadmin.EndEntityProfileExistsException;
 import org.ejbca.core.model.ra.raadmin.EndEntityProfileNotFoundException;
-import org.ejbca.core.model.util.EjbLocalHelper;
 import org.ejbca.ui.web.admin.BaseManagedBean;
-import org.ejbca.ui.web.admin.cainterface.CAInterfaceBean;
 import org.ejbca.ui.web.admin.configuration.EjbcaWebBean;
-import org.ejbca.ui.web.admin.hardtokeninterface.HardTokenInterfaceBean;
-import org.ejbca.ui.web.admin.rainterface.RAInterfaceBean;
 
 /**
- * 
  * JSF MBean backing edit end entity profiles page.
  *
  * @version $Id$
  */
 @ManagedBean
+//@ViewScoped
 @SessionScoped
 public class EndEntityProfilesMBean extends BaseManagedBean implements Serializable {
-    
+
     private static final long serialVersionUID = 1L;
     private static final Logger log = Logger.getLogger(EndEntityProfilesMBean.class);
-    
-    private final EjbLocalHelper ejbLocalhelper = new EjbLocalHelper();
-    private final AuthorizationSessionLocal authorizationSession = ejbLocalhelper.getAuthorizationSession();
-    
+
+    @EJB
+    private AuthorizationSessionLocal authorizationSession;
+    @EJB
+    private CertificateProfileSessionLocal certificateProfileSession;
+    @EJB
+    private EndEntityProfileSessionLocal endEntityProfileSession;
+
     private EjbcaWebBean ejbcaWebBean = getEjbcaWebBean();
-    private CAInterfaceBean caBean = new CAInterfaceBean();
-    private RAInterfaceBean raBean = new RAInterfaceBean();
-    private HardTokenInterfaceBean tokenBean = new HardTokenInterfaceBean();
-       
+
     @PostConstruct
     private void postConstruct() {
         final HttpServletRequest req = (HttpServletRequest) FacesContext.getCurrentInstance().getExternalContext().getRequest();
         try {
             ejbcaWebBean.initialize(req, AccessRulesConstants.REGULAR_VIEWENDENTITYPROFILES);
-            caBean.initialize(ejbcaWebBean);
-            raBean.initialize(req, ejbcaWebBean);
-            tokenBean.initialize(req, ejbcaWebBean);
-            } catch (Exception e) {
-                throw new IllegalStateException(e);
-            }
+        } catch (Exception e) {
+            throw new IllegalStateException(e);
+        }
     }
     
     private Integer selectedEndEntityProfileId = null;
     
-    private boolean renameInProgress = false;
     private boolean deleteInProgress = false;
     private boolean viewOnly = true;
     
     private String endEntityProfileName;
-    private String profile;
-    
     private UploadedFile uploadFile;
-    
     private List<SelectItem> endEntityProfileItems = null; 
-    
-    private class EndEntityProfileItem {
-        private Integer id;
-        private String name;
-        
-        private EndEntityProfileItem(final Integer id, final String name) {
-            this.id = id;
-            this.name = name;
-        }
-        
-        private Integer getId() {
-            return id;
-        }
 
-        private String getName() {
-            return name;
-        }
-     }
-    
     public String getEndEntityProfileName() {
         return endEntityProfileName;
     }
@@ -126,11 +100,12 @@ public class EndEntityProfilesMBean extends BaseManagedBean implements Serializa
         endEntityProfileName = endEntityProfileName.trim();
         if (!StringTools.checkFieldForLegalChars(endEntityProfileName)) {
             addErrorMessage("ONLYCHARACTERS");
+            this.endEntityProfileName = null;
         } else {
             this.endEntityProfileName = endEntityProfileName;
         }
     }
-            
+
     public boolean isAuthorizedToEdit() {
         return authorizationSession.isAuthorizedNoLogging(getAdmin(), AccessRulesConstants.REGULAR_EDITENDENTITYPROFILES);
     }
@@ -144,52 +119,41 @@ public class EndEntityProfilesMBean extends BaseManagedBean implements Serializa
     }
     
     public boolean isEmptyProfile() {
-        return selectedEndEntityProfileId.equals(EndEntityConstants.EMPTY_END_ENTITY_PROFILE);
-    }
-    
-    public String getProfile() { 
-        return profile;
-    }
-    
-    public void setProfile(String profile) {
-        this.profile = profile; 
+        return selectedEndEntityProfileId != null && selectedEndEntityProfileId.equals(EndEntityConstants.EMPTY_END_ENTITY_PROFILE);
     }
     
     public List<SelectItem> getEndEntityProfileItems() {
         if (endEntityProfileItems == null) {
             endEntityProfileItems = new ArrayList<>();
-            final List<EndEntityProfileItem> items = new ArrayList<>();
-            TreeMap<String,String> profiles = getEjbcaWebBean().getAuthorizedEndEntityProfileNames(AccessRulesConstants.VIEW_END_ENTITY);
-            List<String> withMissingCAs = raBean.getAuthorizedEndEntityProfileIdsWithMissingCAs();
+            final TreeMap<String,String> profiles = getEjbcaWebBean().getAuthorizedEndEntityProfileNames(AccessRulesConstants.VIEW_END_ENTITY);
+            final List<Integer> withMissingCAs = endEntityProfileSession.getAuthorizedEndEntityProfileIdsWithMissingCAs(getAdmin());
             for(Entry<String, String> entry : profiles.entrySet()) {
-                String profileName = entry.getKey();
-                String profileId = entry.getValue();
-                final boolean missingCa = withMissingCAs.contains(profileId);
-                String displayName = profileName + (missingCa ? " "+getEjbcaWebBean().getText("MISSINGCAIDS") : "");
-                items.add(new EndEntityProfileItem(new Integer(profileId), displayName));
-            }
-            for (EndEntityProfileItem item : items){
-                endEntityProfileItems.add(new SelectItem(item.getId(), item.getName() ));
+                final String profileName = entry.getKey();
+                final String profileId = entry.getValue();
+                final boolean missingCa = withMissingCAs.contains(Integer.valueOf(profileId));
+                final String displayName = profileName + (missingCa ? " "+getEjbcaWebBean().getText("MISSINGCAIDS") : "");
+                endEntityProfileItems.add(new SelectItem(Integer.valueOf(profileId), displayName));
             }
         }
          return endEntityProfileItems;
     } 
     
     public void actionAdd() {
-        endEntityProfileName = getEndEntityProfileName();
-        if (endEntityProfileName != null && endEntityProfileName.length() > 0) {
-            try {
-                final EndEntityProfile endEntityProfile = new EndEntityProfile();
-                endEntityProfile.setAvailableCAs(getEjbcaWebBean().getAuthorizedCAIds());
-                getEjbcaWebBean().getEjb().getEndEntityProfileSession().addEndEntityProfile(getAdmin(), endEntityProfileName, endEntityProfile);
-            } catch (EndEntityProfileExistsException e) {
-                addErrorMessage("ENDENTITYPROFILEALREADY");
-            } catch (AuthorizationDeniedException e) {
-                addNonTranslatedErrorMessage(e.getMessage());
-            }
+        if (StringUtils.isBlank(endEntityProfileName)) {
+            addErrorMessage("EEPROFILENAMEREQUIRED");
+            return;
         }
-        endEntityProfileName = null;
-        endEntityProfileItems = null;
+        try {
+            final EndEntityProfile endEntityProfile = new EndEntityProfile();
+            endEntityProfile.setAvailableCAs(getEjbcaWebBean().getAuthorizedCAIds());
+            endEntityProfileSession.addEndEntityProfile(getAdmin(), endEntityProfileName, endEntityProfile);
+            endEntityProfileName = null;
+            endEntityProfileItems = null;
+        } catch (EndEntityProfileExistsException e) {
+            addErrorMessage("EEPROFILEALREADYEXISTS");
+        } catch (AuthorizationDeniedException e) {
+            addNonTranslatedErrorMessage(e.getMessage());
+        }
     }
     
     public Integer getSelectedEndEntityProfileId() {
@@ -205,111 +169,86 @@ public class EndEntityProfilesMBean extends BaseManagedBean implements Serializa
             deleteInProgress = true;
         }
     }
-        
+
     public boolean isDeleteInProgress() {
         return deleteInProgress;
     }
     
     private boolean selectedProfileExists() {
-        if(selectedEndEntityProfileId != null) {
-            return getEjbcaWebBean().getEjb().getEndEntityProfileSession().getEndEntityProfile(selectedEndEntityProfileId) != null;
+        if (selectedEndEntityProfileId != null) {
+            return endEntityProfileSession.getEndEntityProfile(selectedEndEntityProfileId) != null;
         } else {
             return false;
         }
     }
-    
+
     public String getSelectedEndEntityProfileName() {
-        final Integer profileId = getSelectedEndEntityProfileId();
-        if (profileId != null) {
-            return getEjbcaWebBean().getEjb().getEndEntityProfileSession().getEndEntityProfileName(profileId.intValue());
+        if (selectedEndEntityProfileId != null) {
+            return endEntityProfileSession.getEndEntityProfileName(selectedEndEntityProfileId);
         }
         return null;
     }
-    
+
     public void actionDeleteConfirm() {
         try {
-            getEjbcaWebBean().getEjb().getEndEntityProfileSession().removeEndEntityProfile(getAdmin(), getSelectedEndEntityProfileName());
-            getEjbcaWebBean().getEjb().getCertificateProfileSession().flushProfileCache();
+            endEntityProfileSession.removeEndEntityProfile(getAdmin(), getSelectedEndEntityProfileName());
+            reset();
         } catch (AuthorizationDeniedException e) {
             addNonTranslatedErrorMessage("Not authorized to remove end entity profile.");
         }
-        actionCancel();
-        super.nonAjaxPostRedirectGet(null);
+        nonAjaxPostRedirectGet(null);
     }
-        
-    public void actionCancel() {
+
+    public void reset() {
         deleteInProgress = false;
-        renameInProgress = false;
         endEntityProfileItems = null;
         selectedEndEntityProfileId = null;
         endEntityProfileName = null;
     }
-        
-    public boolean isRenameInProgress() {
-        return renameInProgress;
+
+    public void actionCancel() {
+        deleteInProgress = false;
     }
 
     public void actionRename() {
-        if (selectedProfileExists()) {
-            renameInProgress = true;
+        if (!selectedProfileExists()) {
+            // Do nothing
+        } else if (StringUtils.isBlank(endEntityProfileName)) {
+            addErrorMessage("EEPROFILENAMEREQUIRED");
+        } else  if (isEmptyProfile()) {
+            addErrorMessage("YOUCANTEDITEMPTYPROFILE");
+        } else {
+            try {
+                endEntityProfileSession.renameEndEntityProfile(getAdmin(), getSelectedEndEntityProfileName(), endEntityProfileName);
+                reset();
+            } catch (EndEntityProfileExistsException e) {
+                addErrorMessage("EEPROFILEALREADYEXISTS");
+            } catch (AuthorizationDeniedException e) {
+                addNonTranslatedErrorMessage("Not authorized to rename end entity profile.");
+            }
         }
     }
 
-    public void actionRenameConfirm() {
-        if (selectedProfileExists()) {
-            final String endEntityProfileName = getEndEntityProfileName();
-            if (endEntityProfileName.length() > 0) {
-                if(isEmptyProfile()) {
-                    addErrorMessage("YOUCANTEDITEMPTYPROFILE");
-                } else {
-                    try {
-                        getEjbcaWebBean().getEjb().getEndEntityProfileSession().renameEndEntityProfile(getAdmin(), getSelectedEndEntityProfileName(), endEntityProfileName);
-                    } catch (EndEntityProfileExistsException e) {
-                        addErrorMessage("ENDENTITYPROFILEALREADY");
-                    } catch (AuthorizationDeniedException e) {
-                        addNonTranslatedErrorMessage("Not authorized to rename end entity profile.");
-                    }
-                }
-            }
-            actionCancel();
-        }
-    }
-    
     public boolean isOperationInProgress() {
-        return isRenameInProgress() || isDeleteInProgress();
+        return isDeleteInProgress();
     }
-    
-    public String editProfile() {
-        return "edit";
-    }
-    
-    public String viewProfile() {
-        return "view";
-    }
-    
-    public String saveProfile() {
-        return "done";
-    }
-    
-    public String leaveProfile() {
-        return "done";
-    }
-    
+
     public String getInputName() {
         return ejbcaWebBean.getText("FORMAT_ID_STR");
     }
-    
-    public void actionImportProfiles() throws IOException, FileUploadException, NumberFormatException, AuthorizationDeniedException, EndEntityProfileExistsException, EndEntityProfileNotFoundException {
+
+    public void actionImportProfiles() throws IOException, NumberFormatException, AuthorizationDeniedException, EndEntityProfileExistsException, EndEntityProfileNotFoundException {
         if (uploadFile == null) {
-            FacesContext.getCurrentInstance().addMessage(null, new FacesMessage(FacesMessage.SEVERITY_ERROR, "File upload failed.", null));
+//            FacesContext.getCurrentInstance().addMessage(null, new FacesMessage(FacesMessage.SEVERITY_ERROR, "File upload failed.", null));
+            addNonTranslatedErrorMessage("File upload failed.");
             return;
         }
         importProfilesFromZip(getUploadFile().getBytes());
         endEntityProfileItems = null;
     }
     
-    public void importProfilesFromZip(byte[] filebuffer) throws AuthorizationDeniedException,
-    NumberFormatException, IOException, EndEntityProfileExistsException, EndEntityProfileNotFoundException {
+    public void importProfilesFromZip(final byte[] filebuffer) throws AuthorizationDeniedException, NumberFormatException, IOException,
+            EndEntityProfileExistsException, EndEntityProfileNotFoundException {
         if (filebuffer.length == 0) {
             throw new IllegalArgumentException("No input file");
         }
@@ -361,11 +300,11 @@ public class EndEntityProfilesMBean extends BaseManagedBean implements Serializa
             if (log.isDebugEnabled()) {
                 log.debug("Extracted profile name '" + profilename + "' and profile ID '" + profileid + "'");
             }
-            if (ignoreProfile(filename, profilename, profileid)) {
+            if (ignoreProfile(profilename)) {
                 ignoredFiles += filename + ", ";
                 continue;
             }
-            if (getEjbcaWebBean().getEjb().getEndEntityProfileSession().getEndEntityProfile(profileid) != null) {
+            if (endEntityProfileSession.getEndEntityProfile(profileid) != null) {
                 log.warn("Endentity profile id '" + profileid + "' already exist in database. Adding with a new profile id instead.");
                 profileid = -1; // create a new id when adding the profile
             }
@@ -374,7 +313,7 @@ public class EndEntityProfilesMBean extends BaseManagedBean implements Serializa
             while ((zipInputstream.available() == 1) && (i < filebytes.length)) {
                 filebytes[i++] = (byte) zipInputstream.read();
             }
-            final EndEntityProfile eeProfile = getEndEntityProfileFromByteArray(profilename, filebytes);
+            final EndEntityProfile eeProfile = getEndEntityProfileFromByteArray(filebytes);
             if (eeProfile == null) {
                 String msg = "Faulty XML file '" + filename + "'. Failed to read end entity Profile.";
                 log.info(msg + " Ignoring file.");
@@ -382,9 +321,9 @@ public class EndEntityProfilesMBean extends BaseManagedBean implements Serializa
                 continue;
             }
             if (profileid == -1) {
-                getEjbcaWebBean().getEjb().getEndEntityProfileSession().addEndEntityProfile(getAdmin(), profilename, eeProfile);
+                endEntityProfileSession.addEndEntityProfile(getAdmin(), profilename, eeProfile);
             } else {
-                getEjbcaWebBean().getEjb().getEndEntityProfileSession().addEndEntityProfile(getAdmin(), profileid, profilename, eeProfile);                
+                endEntityProfileSession.addEndEntityProfile(getAdmin(), profileid, profilename, eeProfile);                
             }
             importedFiles += filename + ", ";
             log.info("Added End entity profile: " + profilename);
@@ -394,7 +333,7 @@ public class EndEntityProfilesMBean extends BaseManagedBean implements Serializa
         printImportMessage(nrOfFiles, importedFiles, ignoredFiles);
     }
 
-    private EndEntityProfile getEndEntityProfileFromByteArray(String profilename, byte[] profileBytes) {
+    private EndEntityProfile getEndEntityProfileFromByteArray(final byte[] profileBytes) {
         ByteArrayInputStream is = new ByteArrayInputStream(profileBytes);
         EndEntityProfile profile = new EndEntityProfile();
         try {
@@ -404,7 +343,7 @@ public class EndEntityProfilesMBean extends BaseManagedBean implements Serializa
             try {
                 data = decoder.readObject();
             } catch (IOException e) {
-               log.info("Error parsing end entity profile data: " + e.getMessage());
+                log.info("Error parsing end entity profile data: " + e.getMessage());
                 if (log.isDebugEnabled()) {
                     log.debug("Full stack trace: ", e);
                 }
@@ -424,8 +363,8 @@ public class EndEntityProfilesMBean extends BaseManagedBean implements Serializa
     }
         
     /** @return true if the file shall be ignored from an End Entity Profile import, false if it should be imported */
-    private boolean ignoreFile(String filename) {
-        if (filename.lastIndexOf(".xml") != (filename.length() - 4)) {
+    private boolean ignoreFile(final String filename) {
+        if (!filename.endsWith(".xml")) {
             log.info(filename + " is not an XML file. IGNORED");
             return true;
         }
@@ -439,19 +378,20 @@ public class EndEntityProfilesMBean extends BaseManagedBean implements Serializa
 
     /** @return true if the profile should be ignored from a End Entity Profile import because it already exists, false if it should be imported 
      * @throws EndEntityProfileNotFoundException */
-    private boolean ignoreProfile(String filename, String profilename, int profileid) throws EndEntityProfileNotFoundException {
+    private boolean ignoreProfile(final String profilename) throws EndEntityProfileNotFoundException {
         // Check if the profiles already exist
-        if (ejbcaWebBean.getEjb().getEndEntityProfileSession().getEndEntityProfile(profilename) != null) {
+        if (endEntityProfileSession.getEndEntityProfile(profilename) != null) {
             log.info("End entity profile '" + profilename + "' already exist in database. IGNORED");
             return true;
         }
        return false;
     }
-        
-    private void printImportMessage(int nrOfFiles, String importedFiles, String ignoredFiles) {
+
+    private void printImportMessage(final int nrOfFiles, String importedFiles, String ignoredFiles) {
         String msg = "Number of files included in " + uploadFile.getName() + ": " + nrOfFiles;
         log.info(msg);
-        FacesContext.getCurrentInstance().addMessage(null, new FacesMessage(FacesMessage.SEVERITY_INFO, msg, null));
+//        FacesContext.getCurrentInstance().addMessage(null, new FacesMessage(FacesMessage.SEVERITY_INFO, msg, null));
+        addNonTranslatedInfoMessage(msg);
         if (StringUtils.isNotEmpty(importedFiles)) {
             importedFiles = importedFiles.substring(0, importedFiles.length() - 2);
         }
@@ -459,7 +399,8 @@ public class EndEntityProfilesMBean extends BaseManagedBean implements Serializa
         if (log.isDebugEnabled()) {
             log.debug(msg);
         }
-        FacesContext.getCurrentInstance().addMessage(null, new FacesMessage(FacesMessage.SEVERITY_INFO, msg, null));
+//        FacesContext.getCurrentInstance().addMessage(null, new FacesMessage(FacesMessage.SEVERITY_INFO, msg, null));
+        addNonTranslatedInfoMessage(msg);
         if (StringUtils.isNotEmpty(ignoredFiles)) {
             ignoredFiles = ignoredFiles.substring(0, ignoredFiles.length() - 2);
         }
@@ -467,10 +408,11 @@ public class EndEntityProfilesMBean extends BaseManagedBean implements Serializa
         if (log.isDebugEnabled()) {
             log.debug(msg);
         }
-        FacesContext.getCurrentInstance().addMessage(null, new FacesMessage(FacesMessage.SEVERITY_INFO, msg, null));
+//        FacesContext.getCurrentInstance().addMessage(null, new FacesMessage(FacesMessage.SEVERITY_INFO, msg, null));
+        addNonTranslatedInfoMessage(msg);
     }
 
-    public void setUploadFile(UploadedFile uploadFile) {
+    public void setUploadFile(final UploadedFile uploadFile) {
         this.uploadFile = uploadFile;
     }
     
@@ -499,19 +441,19 @@ public class EndEntityProfilesMBean extends BaseManagedBean implements Serializa
             return "";
         }
     }*/
-    
+
     public void actionCloneProfile() {
-        final String endEntityProfileName = getEndEntityProfileName();
-        if (endEntityProfileName.length() > 0) {
-            try {
-                getEjbcaWebBean().getEjb().getEndEntityProfileSession().cloneEndEntityProfile(getAdmin(), getSelectedEndEntityProfileName(), endEntityProfileName);
-            } catch (EndEntityProfileExistsException e) {
-                addErrorMessage("ENDENTITYPROFILEALREADY");
-                
-            } catch (AuthorizationDeniedException e) {
-                addNonTranslatedErrorMessage(e.getMessage()); 
-            }
+        if (StringUtils.isBlank(endEntityProfileName)) {
+            addErrorMessage("EEPROFILENAMEREQUIRED");
+            return;
         }
-        actionCancel();
+        try {
+            endEntityProfileSession.cloneEndEntityProfile(getAdmin(), getSelectedEndEntityProfileName(), endEntityProfileName);
+            reset();
+        } catch (EndEntityProfileExistsException e) {
+            addErrorMessage("EEPROFILEALREADYEXISTS");
+        } catch (AuthorizationDeniedException e) {
+            addNonTranslatedErrorMessage(e.getMessage());
+        }
     }
 }
